--- a/template/index.html
+++ b/template/index.html
@@ -2,20 +2,35 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Stellar Admin</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Admin Template</title>
     <!-- plugins:css -->
-    <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="assets/vendors/simple-line-icons/css/simple-line-icons.css">
-    <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
+    <link
+      rel="stylesheet"
+      href="assets/vendors/mdi/css/materialdesignicons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/vendors/simple-line-icons/css/simple-line-icons.css"
+    />
+    <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css" />
     <!-- endinject -->
     <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="assets/vendors/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
+    <link
+      rel="stylesheet"
+      href="assets/vendors/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css"
+    />
     <!-- End plugin css for this page -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="assets/css/demo_1/style.css">
+    <link rel="stylesheet" href="assets/css/demo_1/style.css" />
     <!-- endinject -->
     <link rel="shortcut icon" href="assets/images/favicon.png" />
   </head>
@@ -24,13 +39,26 @@
       <a class="navbar-brand" href="#">
         <img class="logo" src="assets/images/logo.svg" alt="Stellar Admin" />
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto d-flex align-items-center">
           <li class="nav-item">
-            <a class="nav-link px-3" href="http://www.bootstrapdash.com/demo/stellar/documentation/documentation.html" target="_blank">Documentation</a>
+            <a
+              class="nav-link px-3"
+              href="http://www.bootstrapdash.com/demo/stellar/documentation/documentation.html"
+              target="_blank"
+              >Documentation</a
+            >
           </li>
         </ul>
       </div>
@@ -40,38 +68,74 @@
         <div clsss="wrapper">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="text-center mb-5 mt-4 font-weight-light text-uppercase text-muted">Choose a Demo</h1>
+              <h1
+                class="text-center mb-5 mt-4 font-weight-light text-uppercase text-muted"
+              >
+                Choose a Demo
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 grid-margin">
               <div class="p-3">
-                <a href="demo_1/index.html" target="_blank" class="text-decoration-none">
-                  <img src="assets/images/screenshots/vertical-light.jpg" alt="default" class="mw-100 mb-4 shadow-lg" />
+                <a
+                  href="demo_1/index.html"
+                  target="_blank"
+                  class="text-decoration-none"
+                >
+                  <img
+                    src="assets/images/screenshots/vertical-light.jpg"
+                    alt="default"
+                    class="mw-100 mb-4 shadow-lg"
+                  />
                   <h4 class="text-dark text-center">Vertical Light</h4>
                 </a>
               </div>
             </div>
             <div class="col-md-6 grid-margin">
               <div class="p-3">
-                <a href="demo_2/index.html" target="_blank" class="text-decoration-none">
-                  <img src="assets/images/screenshots/vertical-dark.jpg" alt="default" class="mw-100 mb-4 shadow-lg" />
+                <a
+                  href="demo_2/index.html"
+                  target="_blank"
+                  class="text-decoration-none"
+                >
+                  <img
+                    src="assets/images/screenshots/vertical-dark.jpg"
+                    alt="default"
+                    class="mw-100 mb-4 shadow-lg"
+                  />
                   <h4 class="text-dark text-center">Vertical Dark</h4>
                 </a>
               </div>
             </div>
             <div class="col-md-6 grid-margin">
               <div class="p-3">
-                <a href="demo_3/index.html" target="_blank" class="text-decoration-none">
-                  <img src="assets/images/screenshots/horizontal-light.jpg" alt="horizontal" class="mw-100 mb-4 shadow-lg" />
+                <a
+                  href="demo_3/index.html"
+                  target="_blank"
+                  class="text-decoration-none"
+                >
+                  <img
+                    src="assets/images/screenshots/horizontal-light.jpg"
+                    alt="horizontal"
+                    class="mw-100 mb-4 shadow-lg"
+                  />
                   <h4 class="text-dark text-center">Horizontal Light</h4>
                 </a>
               </div>
             </div>
             <div class="col-md-6 grid-margin">
               <div class="p-3">
-                <a href="demo_4/index.html" target="_blank" class="text-decoration-none">
-                  <img src="assets/images/screenshots/horizontal-dark.jpg" alt="horizontal" class="mw-100 mb-4 shadow-lg" />
+                <a
+                  href="demo_4/index.html"
+                  target="_blank"
+                  class="text-decoration-none"
+                >
+                  <img
+                    src="assets/images/screenshots/horizontal-dark.jpg"
+                    alt="horizontal"
+                    class="mw-100 mb-4 shadow-lg"
+                  />
                   <h4 class="text-dark text-center">Horizontal Dark</h4>
                 </a>
               </div>
